--- a/Api/src/main/resources/application.properties
+++ b/Api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Api
+spring.datasource.url=jdbc:postgresql://localhost:5432/devdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8090/realms/quickstart/protocol/openid-connect/certs
